# automation-projects

./: .gitignore  README.md
Appium/: appium.csproj  test.cs
FlaUI/: Calculator.cs  FlaUI.csproj
JMeter/EXAMPLE/: Run Commands.txt
JMeter/cloudbeat/: cb-requests.jmx
JMeter/formatica/: run command.txt  wsh-services.jmx
JMeter/wizard/: results.csv  run commands.txt  soap-request.jmx
JMeter/xgwint/: Run commands.txt  ccm-reports.jmx  sbl-rest-soap.jmx
Java/CloudBeat/: CloudBeat_Contact_STD.docx  ContactForm.java
Java/Hafaka/: PolicyCheck .java
Java/onlineCodeEditorExample/: TypingCode.java  code.txt
Java/saucedemo-junit-allure/: .gitignore  README.md  pom.xml
Oxygen/- Examples/: drivers.lnk  oxygen-cli.txt  oxygen.env.js
Oxygen/AIG/: 01. Login with OTP.js  02. Car Insurance Form.js  Config.js
Oxygen/Altshuler/: Create & Delete.js  הרשמה לקרן השתלמות.js
Oxygen/Bank-Hadoar/: Money Transfer.js
Oxygen/Clalit/: Create Reservation.js
Oxygen/CloudBeat/: oxygen.conf.js  oxygen.env.js  oxygen.po.js
Oxygen/Delek/: תדלוק.js  (+1 more)
Playwright/: commands.txt
Python/cloudbeat-pytest-selenium/: .CB_TEST_RESULTS.json  pyproject.toml  readme.md  requirements.txt
Python/cloudbeat-pytest-selenium/src/pages/: login.py
Python/cloudbeat-pytest-selenium/src/pytest_selenium.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Python/cloudbeat-pytest-selenium/src/utils/: logger.py  readProps.py
Python/cloudbeat-pytest-selenium/tests/: conftest.py  test_login.py  test_products.py
Random/: HideStoryViewers.js  webull price in title.txt
UIPath/: Project.1.0.1.nupkg
(+843 files in other folders)
